--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/michaelliao/learn-javascript.git"
+    "url": ""
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
@@ -24,12 +24,11 @@
     "koa-static": "^4.0.2",
     "log4js": "^2.3.3",
     "moment": "^2.18.1",
-    "mysql": "^2.14.1",
-    "mysql2": "^1.4.0",
     "nodemailer": "^4.4.1",
     "nodemailer-smtp-transport": "^2.7.4",
-    "nodemon": "^1.11.0",
     "pingpp": "^2.0.13",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "sequelize": "^4.4.3",
     "xml2js": "^0.4.19"
   }
