--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa-static": "^4.0.2",
     "log4js": "^2.3.3",
     "moment": "^2.18.1",
+    "mysql": "^2.15.0",
     "nodemailer": "^4.4.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "pingpp": "^2.0.13",
