--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "log4js": "^2.3.3",
     "moment": "^2.18.1",
     "mysql": "^2.15.0",
+    "mysql2": "^1.5.1",
     "nodemailer": "^4.4.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "pingpp": "^2.0.13",
