--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa": "2.0.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
+    "koa-send": "^4.1.2",
     "koa-static": "^4.0.2",
     "log4js": "^2.3.3",
     "moment": "^2.18.1",
