--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^3.1.9-1",
     "koa": "2.0.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-cors": "0.0.16",
     "koa-router": "^7.2.1",
     "koa-send": "^4.1.2",
     "koa-static": "^4.0.2",
